--- a/symfony/src/Custom/BookBundle/Resources/config/routing.yml
+++ b/symfony/src/Custom/BookBundle/Resources/config/routing.yml
@@ -5,3 +5,14 @@ custom_book_book:
 custom_book_homepage:
     path:     /hello
     defaults: { _controller: CustomBookBundle:Default:index }
+
+
+login:
+  path: /login
+  defaults: { _controller: CustomBookBundle:Security:login }
+
+login_check:
+  path: /login_check
+
+logout:
+  pattern: /logout
